--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "ionela cristea",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "prettier": "2.1.2"
