--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "tour-guide",
-  "version": "1.0.0",
-  "description": "A simple tour guide api",
-  "main": "app.js",
-  "scripts": {
-    "serve": "nodemon app.js"
-  },
-  "author": "ionela cristea",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2"
-  },
-  "devDependencies": {
-    "prettier": "2.1.2"
-  }
+    "name": "tour-guide",
+    "version": "1.0.0",
+    "description": "A simple tour guide api",
+    "main": "app.js",
+    "scripts": {
+        "serve": "nodemon server.js"
+    },
+    "author": "ionela cristea",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "morgan": "^1.10.0",
+        "multer": "^1.4.2"
+    },
+    "devDependencies": {
+        "prettier": "2.1.2"
+    }
 }
