--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
-    "name": "tour-guide",
-    "version": "1.0.0",
-    "description": "A simple tour guide api",
-    "main": "app.js",
-    "scripts": {
-        "serve": "nodemon server.js"
-    },
-    "author": "ionela cristea",
-    "license": "ISC",
-    "dependencies": {
-        "body-parser": "^1.19.0",
-        "express": "^4.17.1",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.2"
-    },
-    "devDependencies": {
-        "prettier": "2.1.2"
-    }
+  "name": "tour-guide",
+  "version": "1.0.0",
+  "description": "A simple tour guide api",
+  "main": "app.js",
+  "scripts": {
+    "serve": "nodemon server.js",
+    "build": "NODE_ENV=production nodemon server.js",
+    "test": "NODE_ENV=testing nodemon server.js"
+  },
+  "author": "ionela cristea",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx": "^0.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.3",
+    "prettier": "^2.1.2"
+  }
 }
