--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,13 +1,26 @@
 {
-    "beautify.language": {
-      "js": {
-        "type": ["javascript", "json"],
-        "filename": [".jshintrc", ".jsbeautifyrc"]
-        // "ext": ["js", "json"]
-        // ^^ to set extensions to be beautified using the javascript beautifier
-      },
-      "css": ["css", "scss"],
-      "html": ["htm", "html"]
-      // ^^ providing just an array sets the VS Code file type
-    }
+  "beautify.language": {
+    "js": {
+      "type": [
+        "javascript",
+        "json"
+      ],
+      "filename": [
+        ".jshintrc",
+        ".jsbeautifyrc"
+      ],
+      "ext": [
+        "js",
+        "json"
+      ]
+    },
+    "css": [
+      "css",
+      "scss"
+    ],
+    "html": [
+      "htm",
+      "html"
+    ]
   }
+}
