--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "slugify": "^1.4.5"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
