--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.8",
+    "mongoose-validator": "^2.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "slugify": "^1.4.5"
+    "slugify": "^1.4.5",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
