--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose-validator": "^2.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "ndb": "^1.1.5",
     "slugify": "^1.4.5",
     "validator": "^13.1.17"
   },
