--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "ndb": "^1.1.5",
+    "nodemailer": "^6.4.14",
     "slugify": "^1.4.5",
     "validator": "^13.1.17"
   },
