--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.3",
     "helmet": "^4.1.1",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
     "mongoose-validator": "^2.1.0",
