--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.2",
     "ndb": "^1.1.5",
     "nodemailer": "^6.4.14",
+    "sharp": "^0.26.3",
     "slugify": "^1.4.5",
     "validator": "^13.1.17",
     "xss-clean": "^0.1.1"
