--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.4.14",
     "sharp": "^0.26.3",
     "slugify": "^1.4.5",
+    "stripe": "^8.125.0",
     "validator": "^13.1.17",
     "xss-clean": "^0.1.1"
   },
