--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-rate-limit": "^5.1.3",
     "helmet": "^4.1.1",
     "hpp": "^0.2.3",
+    "json2md": "^1.9.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
     "mongoose-validator": "^2.1.0",
