--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "A simple tour guide api",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "serve": "nodemon server.js",
     "build": "NODE_ENV=production nodemon server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./dist/module/ --out-file bundle.js",
     "test": "NODE_ENV=testing nodemon server.js",
     "debug": "ndb node server.js"
   },
@@ -34,9 +36,11 @@
     "slugify": "^1.4.5",
     "stripe": "^8.125.0",
     "validator": "^13.1.17",
+    "ws": "^7.4.2",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
     "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
@@ -45,6 +49,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.3",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2"
   },
   "engines": {
